<resources>
    <string name="app_name">Workout Manager</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="title_workout">Workout</string>
    <string name="title_calender">Calender</string>
    <string name="enter_workout_name">Enter Workout Name</string>
    <string name="enter_exercise_name">Enter Exercise Name</string>
    <string name="workout_deleted">Workout Deleted!</string>
    <string name="exercise_deleted">Exercise Deleted!</string>
    <string name="session_deleted">Set Deleted!</string>
    <string name="undo">UNDO</string>
    <string name="add_workout">Add Workout</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="no_workouts">No Workouts Added</string>


    <string name="three">Three</string>
    <string name="two">Two</string>
    <string name="one">One</string>
    <string name="rest">Rest</string>
    <string name="set">Set</string>
    <string name="save">Save</string>
    <string name="enter_rest_time_in_seconds">Enter Rest Time in Seconds</string>
    <string name="enter_work_time_in_seconds">Enter Work Time in Seconds</string>
    <string name="lock_unlock_about">Enable/Disable above mentioned options.\nIf lock icon is displayed, the icons (rewind, forward, play, pause) will be disabled and vise-versa.\nThe options are disabled/locked by default.</string>
    <string name="rewind_forward_about">Rewind/Forward ongoing set by 10 seconds.</string>
    <string name="play_pause_about">Play/Pause Workout.</string>
    <string name="stop_about">Stops the ongoing workout, this option/button is always enabled regardless of lock/unlock button.</string>
    <string name="get_ready">Get Ready</string>
    <string name="empty_name">Name cannot be Empty!</string>
    <string name="zero_category">Select at least one Category!</string>
    <string name="incompatible_category">Cannot select any other category if "Full Body" is selected!</string>
    <string name="workout_header">W O R K O U T S</string>
    <string name="add_workout_header">A D D &#160; &#160; W O R K O U T</string>
    <string name="about_header">A B O U T</string>
    <string name="start_workout">Start Workout</string>
    <string name="stop_workout">Stop Workout?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="add_set">Add Set</string>
    <string name="edit_set">Edit Set</string>
    <string name="edit_exercise">Edit Exercise</string>
    <string name="delete_set">Delete Set</string>
    <string name="move_up">Move Up</string>
    <string name="move_down">Move Down</string>
    <string name="delete_exercise">Delete Exercise</string>
    <string name="edit_workout">Edit Workout</string>
    <string name="delete_workout">Delete Workout</string>
    <string name="android_client_id_debug">374590715228-ti7fstujml1nj4r0g9li34dfqvbrv29i.apps.googleusercontent.com</string>
    <string name="android_client_id_release">374590715228-72ju7quedia7ngh2u7ccdrgtagc83kb3.apps.googleusercontent.com</string>
    <string name="android_client_id_signing">374590715228-vjallfln9352liv64heodt3k1k7h5kjs.apps.googleusercontent.com</string>
    <string name="web_client_id">374590715228-08gir6vml9nvonsl6s39uq3sbg14e1cj.apps.googleusercontent.com</string>
</resources>