<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="Title"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/stop_workout"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_no"
            style="@style/MyButton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/white" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_yes"
            style="@style/MyButton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/white" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>