<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_add_workout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_add_workout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/add_workout_header"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_workout" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_workout_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext_background"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/enter_workout_name"
        android:inputType="textCapCharacters"
        android:maxLength="25"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/icon_color"
        android:textCursorDrawable="@drawable/cursor_background"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/tv_select_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="Select Categories:"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/cl_cardio"
        app:layout_constraintTop_toBottomOf="@+id/edt_workout_name" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_cardio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="150dp"
        android:background="?android:attr/selectableItemBackground"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_select_categories">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_cardio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_gps_filled"
            android:tint="@color/icon_color"
            app:layout_constraintEnd_toStartOf="@+id/tv_cardio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_cardio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="Cardio"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintStart_toEndOf="@+id/img_cardio"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_shoulder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="150dp"
        android:background="?android:attr/selectableItemBackground"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_cardio">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_shoulder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_gps_filled"
            android:tint="@color/icon_color"
            app:layout_constraintEnd_toStartOf="@+id/tv_shoulder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_shoulder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="Shoulder"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintStart_toEndOf="@+id/img_shoulder"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_chest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="150dp"
        android:background="?android:attr/selectableItemBackground"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        app:layout_constraintTop_toBottomOf="@+id/cl_shoulder">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_chest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_gps_filled"
            android:tint="@color/icon_color"
            app:layout_constraintEnd_toStartOf="@+id/tv_chest"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_chest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="Chest"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintStart_toEndOf="@+id/img_chest"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_arms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="150dp"
        android:background="?android:attr/selectableItemBackground"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        app:layout_constraintTop_toBottomOf="@+id/cl_chest">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_arms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_gps_filled"
            android:tint="@color/icon_color"
            app:layout_constraintEnd_toStartOf="@+id/tv_arms"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_arms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="Arms"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintStart_toEndOf="@+id/img_arms"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="150dp"
        android:background="?android:attr/selectableItemBackground"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        app:layout_constraintTop_toBottomOf="@+id/cl_arms">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_gps_filled"
            android:tint="@color/icon_color"
            app:layout_constraintEnd_toStartOf="@+id/tv_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="Back"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintStart_toEndOf="@+id/img_back"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_abs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="150dp"
        android:background="?android:attr/selectableItemBackground"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        app:layout_constraintTop_toBottomOf="@+id/cl_back">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_abs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_gps_filled"
            android:tint="@color/icon_color"
            app:layout_constraintEnd_toStartOf="@+id/tv_abs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_abs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="Abs"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintStart_toEndOf="@+id/img_abs"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_legs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="150dp"
        android:background="?android:attr/selectableItemBackground"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        app:layout_constraintTop_toBottomOf="@+id/cl_abs">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_legs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_gps_filled"
            android:tint="@color/icon_color"
            app:layout_constraintEnd_toStartOf="@+id/tv_legs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_legs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="Legs"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintStart_toEndOf="@+id/img_legs"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_full_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="150dp"
        android:background="?android:attr/selectableItemBackground"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        app:layout_constraintTop_toBottomOf="@+id/cl_legs">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_full_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_gps_filled"
            android:tint="@color/icon_color"
            app:layout_constraintEnd_toStartOf="@+id/tv_full_body"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_full_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="Full Body"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintStart_toEndOf="@+id/img_full_body"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        style="@style/MyButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/edt_workout_name"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_full_body" />
</androidx.constraintlayout.widget.ConstraintLayout>